// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canonical Story Page A11y I can see the skip to content link 1`] = `"Simbira ku birimwo"`;

exports[`Canonical Story Page Analytics ATI 1`] = `"<img height=\\"1px\\" width=\\"1px\\" alt=\\"\\" style=\\"position:absolute\\" src=\\"https://logws1363.ati-host.net?s=598343&amp;s2=40&amp;p=story::gahuza.story.23313911.page&amp;x1=[urn:bbc:cps:48fe44a1-f432-4475-942d-ab017d13b4d0]&amp;x2=[responsive]&amp;x3=[news-gahuza]&amp;x4=[rw]&amp;x7=[article]&amp;x8=[simorgh-nojs]&amp;x9=[Test+story+with+different+IDT2+types+-+BBC+News+Gahuza]&amp;x11=[2020-06-09T16:26:57.000Z]&amp;x12=[2020-06-09T17:09:42.000Z]\\">"`;

exports[`Canonical Story Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/gahuza"`;

exports[`Canonical Story Page Footer I can see the footer copyright and external linking text 1`] = `"© 2020 BBC. BBC ntibazwa ibivuye ku zindi mbuga. Soma ibijanye n'aho duhagaze ku mihora ijana ahandi"`;

exports[`Canonical Story Page Footer Link should match text and url 1`] = `
Object {
  "text": "BBC News, Gahuza",
  "url": "/gahuza",
}
`;

exports[`Canonical Story Page Footer Link should match text and url 2`] = `
Object {
  "text": "Igituma ushobora kwizera BBC News",
  "url": "https://www.bbc.com/gahuza/institutional-49283343",
}
`;

exports[`Canonical Story Page Footer Link should match text and url 3`] = `
Object {
  "text": "Ingingo zo gukoresha urubuga",
  "url": "https://www.bbc.com/gahuza/institutional-35754053",
}
`;

exports[`Canonical Story Page Footer Link should match text and url 4`] = `
Object {
  "text": "Ibijanye na BBC",
  "url": "https://www.bbc.com/gahuza/institutional-35754055",
}
`;

exports[`Canonical Story Page Footer Link should match text and url 5`] = `
Object {
  "text": "Ibigenga n'ubuzima bwite",
  "url": "https://www.bbc.com/gahuza/institutional-35754059",
}
`;

exports[`Canonical Story Page Footer Link should match text and url 6`] = `
Object {
  "text": "Cookies",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`Canonical Story Page Footer Link should match text and url 7`] = `
Object {
  "text": "Vugana na BBC",
  "url": "https://www.bbc.com/gahuza/institutional-35754061",
}
`;

exports[`Canonical Story Page Footer Link should match text and url 8`] = `
Object {
  "text": "AdChoices / Do Not Sell My Info",
  "url": "https://www.bbc.com/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/",
}
`;

exports[`Canonical Story Page Footer Link should match text and url 9`] = `
Object {
  "text": "Soma ibijanye n'aho duhagaze ku mihora ijana ahandi",
  "url": "https://www.bbc.co.uk/help/web/links/",
}
`;

exports[`Canonical Story Page Header I can see the branding 1`] = `"BBC News, Gahuza"`;

exports[`Canonical Story Page Header Navigation link should match text and url 1`] = `
Object {
  "text": "Urupapuro rw'itangiriro",
  "url": "/gahuza",
}
`;

exports[`Canonical Story Page Header Navigation link should match text and url 2`] = `
Object {
  "text": "Amakuru",
  "url": "/gahuza/amakuru",
}
`;

exports[`Canonical Story Page Header Navigation link should match text and url 3`] = `
Object {
  "text": "Imikino",
  "url": "/gahuza/imikino",
}
`;

exports[`Canonical Story Page Header Navigation link should match text and url 4`] = `
Object {
  "text": "Video",
  "url": "/gahuza/media/video",
}
`;

exports[`Canonical Story Page Includes I can see a fallback image when there are disallowed scripts 1`] = `
<img
  alt="Map: St. Albans"
  class="StyledImg-sc-7vx2mr-0 hIxkbt"
  id="include-1"
  src="https://www.test.bbc.com/ws/includes/idt2/3686672a-0a64-4cdb-91c6-ae9ed0f214f7/image/816"
  srcset="https://www.test.bbc.com/ws/includes/idt2/3686672a-0a64-4cdb-91c6-ae9ed0f214f7/image/470 470w,https://www.test.bbc.com/ws/includes/idt2/3686672a-0a64-4cdb-91c6-ae9ed0f214f7/image/816 816w"
/>
`;

exports[`Canonical Story Page Includes IDT2 I can see a "dataPic" 1`] = `
<script
  src="https://news.test.files.bbci.co.uk/include/idt2/static/js/dataPic.64a69df2.js"
  type="text/javascript"
/>
`;

exports[`Canonical Story Page Lead image I can see an image with a caption 1`] = `"Insiguro y'isanamu, Test caption for image 1"`;

exports[`Canonical Story Page SEO Apple Touch Icon should match attributes 1`] = `
Object {
  "sizes": null,
  "url": "http://localhost:7080/gahuza/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Story Page SEO Apple Touch Icon should match attributes 2`] = `
Object {
  "sizes": "72x72",
  "url": "https://news.files.bbci.co.uk/include/articles/public/gahuza/images/icons/icon-72x72.png",
}
`;

exports[`Canonical Story Page SEO Apple Touch Icon should match attributes 3`] = `
Object {
  "sizes": "96x96",
  "url": "https://news.files.bbci.co.uk/include/articles/public/gahuza/images/icons/icon-96x96.png",
}
`;

exports[`Canonical Story Page SEO Apple Touch Icon should match attributes 4`] = `
Object {
  "sizes": "128x128",
  "url": "https://news.files.bbci.co.uk/include/articles/public/gahuza/images/icons/icon-128x128.png",
}
`;

exports[`Canonical Story Page SEO Apple Touch Icon should match attributes 5`] = `
Object {
  "sizes": "144x144",
  "url": "https://news.files.bbci.co.uk/include/articles/public/gahuza/images/icons/icon-144x144.png",
}
`;

exports[`Canonical Story Page SEO Apple Touch Icon should match attributes 6`] = `
Object {
  "sizes": "152x152",
  "url": "https://news.files.bbci.co.uk/include/articles/public/gahuza/images/icons/icon-152x152.png",
}
`;

exports[`Canonical Story Page SEO Apple Touch Icon should match attributes 7`] = `
Object {
  "sizes": "180x180",
  "url": "https://news.files.bbci.co.uk/include/articles/public/gahuza/images/icons/icon-180x180.png",
}
`;

exports[`Canonical Story Page SEO Apple Touch Icon should match attributes 8`] = `
Object {
  "sizes": "192x192",
  "url": "https://news.files.bbci.co.uk/include/articles/public/gahuza/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Story Page SEO Apple Touch Icon should match attributes 9`] = `
Object {
  "sizes": "384x384",
  "url": "https://news.files.bbci.co.uk/include/articles/public/gahuza/images/icons/icon-384x384.png",
}
`;

exports[`Canonical Story Page SEO Apple Touch Icon should match attributes 10`] = `
Object {
  "sizes": "512x512",
  "url": "https://news.files.bbci.co.uk/include/articles/public/gahuza/images/icons/icon-512x512.png",
}
`;

exports[`Canonical Story Page SEO Canonical link 1`] = `"http://localhost:7080/gahuza/23313911"`;

exports[`Canonical Story Page SEO Dir attribute 1`] = `"ltr"`;

exports[`Canonical Story Page SEO FB admins 1`] = `"100004154058350"`;

exports[`Canonical Story Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical Story Page SEO Heading level 1 1`] = `"Test story with different IDT2 types"`;

exports[`Canonical Story Page SEO Lang attribute 1`] = `"rw"`;

exports[`Canonical Story Page SEO Linked data should match text 1`] = `
Object {
  "@context": "http://schema.org",
  "@graph": Array [
    Object {
      "@type": "NewsArticle",
      "author": Object {
        "@type": "NewsMediaOrganization",
        "logo": Object {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/gahuza.png",
          "width": 1024,
        },
        "name": "BBC News Gahuza",
        "noBylinesPolicy": "https://www.bbc.com/gahuza/institutional-49283343#authorexpertise",
      },
      "dateModified": "2020-06-09T17:09:42.000Z",
      "datePublished": "2020-06-09T16:26:57.000Z",
      "description": "Testing types of IDT2",
      "headline": "Test story with different IDT2 types",
      "image": Object {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://ichef.test.bbci.co.uk/news/1024/branded_gahuza/1045D/test/_63735666_3.jpg",
        "width": 1024,
      },
      "mainEntityOfPage": Object {
        "@id": "http://localhost:7080/gahuza/23313911",
        "@type": "WebPage",
        "name": "Test story with different IDT2 types",
      },
      "publisher": Object {
        "@type": "NewsMediaOrganization",
        "logo": Object {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/gahuza.png",
          "width": 1024,
        },
        "name": "BBC News Gahuza",
        "publishingPrinciples": "https://www.bbc.com/gahuza/institutional-49283343",
      },
      "thumbnailUrl": "https://news.files.bbci.co.uk/ws/img/logos/og/gahuza.png",
      "url": "http://localhost:7080/gahuza/23313911",
    },
  ],
}
`;

exports[`Canonical Story Page SEO OG description 1`] = `"Testing types of IDT2"`;

exports[`Canonical Story Page SEO OG image 1`] = `"https://ichef.test.bbci.co.uk/news/1024/branded_gahuza/1045D/test/_63735666_3.jpg"`;

exports[`Canonical Story Page SEO OG image alt 1`] = `"Test caption for first image"`;

exports[`Canonical Story Page SEO OG locale 1`] = `"rw-RW"`;

exports[`Canonical Story Page SEO OG site name 1`] = `"BBC News Gahuza"`;

exports[`Canonical Story Page SEO OG title 1`] = `"Test story with different IDT2 types - BBC News Gahuza"`;

exports[`Canonical Story Page SEO OG type 1`] = `"article"`;

exports[`Canonical Story Page SEO OG url 1`] = `"http://localhost:7080/gahuza/23313911"`;

exports[`Canonical Story Page SEO Page title 1`] = `"Test story with different IDT2 types - BBC News Gahuza"`;

exports[`Canonical Story Page SEO Robots meta tag 1`] = `"noodp,noydir"`;

exports[`Canonical Story Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical Story Page SEO Twitter creator 1`] = `"@bbcgahuza"`;

exports[`Canonical Story Page SEO Twitter description 1`] = `"Testing types of IDT2"`;

exports[`Canonical Story Page SEO Twitter image alt 1`] = `"Test caption for first image"`;

exports[`Canonical Story Page SEO Twitter image src 1`] = `"https://ichef.test.bbci.co.uk/news/1024/branded_gahuza/1045D/test/_63735666_3.jpg"`;

exports[`Canonical Story Page SEO Twitter site 1`] = `"@bbcgahuza"`;

exports[`Canonical Story Page SEO Twitter title 1`] = `"Test story with different IDT2 types - BBC News Gahuza"`;
